--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <title>Responsive Portfolio</title>
+</head>
+<body>
+    <div class="container">
+        <nav class="navbar" style="border-radius: .25rem;">
+            <a class="navbar-brand" href="index.html" id="nav-brand">Brian Saechao</a>
+        </nav>
+    </div>
+    <h1>Test</h1>
+    <div class="container">
+        <h1>Test</h1>
+    </div>
+</body>
+</html>
