--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Responsive Portfolio</title>
 </head>
 <body>
-    <div class="container">
-        <nav class="navbar" style="border-radius: .25rem;">
-            <a class="navbar-brand" href="index.html" id="nav-brand">Brian Saechao</a>
-        </nav>
-    </div>
-    <h1>Test</h1>
-    <div class="container">
-        <h1>Test</h1>
-    </div>
+    <header>
+            <nav class="nav">
+                <div class="container">
+                    <ul class="nav justify-content-end">
+                        <a class="navbar-brand" href="index.html" id="nav-brand">Brian Saechao</a>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+    </header>
 </body>
 </html>
